--- a/css/media.css
+++ b/css/media.css
@@ -82,7 +82,205 @@
             
              min-width: 168px;
         }
+
+/* FOOTER */
+
+.page-footer {
+    padding-top: 96px;
+    padding-bottom: 96px;
+
+    background-color: var(--logo-nav-footer-color);
+    ;
 }
+
+.logo-footer {
+    margin-bottom: 17.5px;
+    color: var(--fonbtn-fonsect-logofooter-color);
+    text-align: start;
+}
+
+.logo-text-footer{
+    text-align: start;
+    margin-bottom: 0;
+}
+
+.text-footer {
+    margin-top: 0;
+    width: 264px;
+    color: var(--fonbtn-fonsect-logofooter-color);
+}
+
+
+.conteiner-footer {
+    padding-left: 108px;
+        padding-right: 164px;
+    display: flex;
+    /* gap:120px; */
+    flex-wrap: wrap;
+    gap: 24px;
+        row-gap: 72px;
+}
+
+.social-media {
+    /* margin-left: 120px; */
+}
+
+.text-footer-social {
+    margin-bottom: 16px;
+
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+
+    color: var(--body-color);
+}
+
+
+
+.list-icon-footer {
+    display: flex;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    gap: 16px;
+    flex-wrap: wrap;
+    min-width: 208px;
+}
+
+.linc-icon-footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--form-input-color-focus);
+
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    transition: background-color var(--transit);
+}
+
+.linc-icon-footer:hover,
+.linc-icon-footer:focus {
+    background-color: var(--color-footer-icon-focus);
+}
+
+.cont-icon-footer {
+
+    width: 24px;
+    height: 24px;
+    fill: var(--fonbtn-fonsect-logofooter-color);
+}
+
+
+.footer-form {
+    display: flex;
+    flex-direction: column;
+    /* margin-left: 80px; */
+    margin-right: 0;
+}
+
+.foote-form-text {
+    margin-bottom: 16px;
+text-align: start;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+
+    color: var(--body-color);
+}
+
+.footer-form-lable {
+    display: contents;
+    /* position: relative; */
+
+    /* min-height: 40px;
+        min-width: 264px; */
+}
+
+.form-input-btn {
+    display: flex;
+    position: relative;
+    gap: 24px;
+    /* min-width: 453; */
+    flex-wrap: wrap;
+    transition: transform var(--transit);
+}
+
+.form-lable-text {
+    position: absolute;
+    top: 8px;
+    left: 16px;
+
+    font-weight: 400;
+    font-style: normal;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+
+    color: var(--body-color);
+}
+
+.form-input-text:focus+.form-lable-text,
+.form-input-text:not(:placeholder-shown)+.form-lable-text {
+    transform: translateX(-56px);
+    /* left:-52px */
+}
+
+
+.form-input-text {
+    min-height: 40px;
+    min-width: 264px;
+    background-color: var(--hero-fon-color);
+    border: 1px solid var(--body-color);
+    border-radius: 4px;
+    padding-left: 16px;
+    outline: none;
+
+
+    font-weight: 400;
+    font-style: normal;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: var(--body-color);
+
+}
+
+.footer-form-btn {
+    position: relative;
+    min-width: 165px;
+    padding-left: 24px;
+    padding-right: 64px;
+    min-height: 40px;
+    margin:0;
+    transition: background-color var(--transit);
+    background-color: var(--ferstlogo-btn-color);
+    color: var(--body-color);
+}
+
+.footer-form-btn:hover,
+.footer-form-btn:focus {
+    background: var(--hover-focus-color);
+    box-shadow: 0px 4px 4px var(--colo-box-shadow);
+}
+
+.footer-btn-icon {
+    position: absolute;
+    top: 10px;
+    right: 24px;
+    width: 24px;
+    height: 20px;
+}
+
+
+
+}
+
+
+
+
 
 
 @media screen and (min-width: 1158px) {
@@ -177,6 +375,10 @@
     display: flex;
     /* gap:120px; */
     flex-wrap: wrap;
+    padding: 0 15px;
+    gap: 0;
+    justify-content: start;
+   
 }
 
 .social-media {
@@ -210,7 +412,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: var(--color-footer-icon);
+    background-color: var(--ferstlogo-btn-color);
 
     border-radius: 50%;
     width: 40px;
@@ -236,6 +438,7 @@
     flex-direction: column;
     margin-left: 80px;
     margin-right: 0;
+    width: auto;
 }
 
 .foote-form-text {
@@ -263,6 +466,7 @@
     /* min-width: 453; */
     flex-wrap: wrap;
     transition: transform var(--transit);
+    gap: 0;
 }
 
 .form-lable-text {
@@ -315,6 +519,7 @@
     transition: background-color var(--transit);
     background-color: var(--ferstlogo-btn-color);
     color: var(--body-color);
+    border: 1px solid transparent;
 }
 
 .footer-form-btn:hover,
