--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,7 @@
 
 .header {
     padding-top: 24px;
-    padding-bottom: 22px;
+    padding-bottom: 23px;
     border-bottom: 1px solid var(--textfooter-color);
 }
 
@@ -65,10 +65,10 @@ body {
 
 }
 
-/* h1,h2,h3, p{
+h1,h2,h3, p{
     margin: 0;
     padding: 0;
-} */
+}
 
 .list {
     display: flex;
@@ -183,8 +183,8 @@ p {
     border: none;
     background-color: transparent;
     margin-left: auto;
-    width: 40px;
-    height: 30px;
+    width: 32px;
+        height: 22px
 }
 
 .menu-btn-icon {
@@ -296,8 +296,9 @@ gap: 70px;
 
 /* hero */
 .hero {
-    height: auto;
-    width: 100%;
+    max-width: 1440px;
+    /* height: auto;
+    width: 100%; */
     padding-top: 112px;
     padding-bottom: 112px;
     margin-left: auto;
